2015-07-15 Martin Grønholdt

* slighttp/http-common.c (print_clf_status): Renamed http_print_clf_status and reimplemented.
* slighttp/http-common.h: Changed renamed and changed print_clf_status as http_print_clf_status.
* slighttp/http.h (http_response): Added message_size.
* slighttp/http-response.c: Added 405 status.
* 			               (http_process_response): Print CLF log to serial port.
* slighttp/http-response.h: Added 405 status.
* rest/gpio.c: Reading of an individual GPIO's status.
*			 : Setting of an individual GPIO's status.


2015-07-14 Martin Grønholdt

* rest/net-names.c (rest_net_names_test): Incomprehensible debug output.
*				   (rest_net_names_destroy): If debugging, tell that we're here.
* rest/gpio.c: Listing of usable GPIO's work.
*			  (rest_gpio_test): Check for actual GPIO number before accepting.
*			  (rest_gpio_destroy): If debugging, tell that we're here.
* response_handlers.h: Added GPIO rest functions.
* rest/rest.h: Added GPIO rest functions.
* user_config.h: Added REST_GPIO_ENABLED.


2015-07-13 Martin Grønholdt

* rest/gpio.c: Added file.
*			   Added json_create_int_array.
* rest/rest.c: Added file.
* 			   Added rest_init.
* rest/rest.h: Added rest_init.


2015-07-10 Martin Grønholdt

* fs/connect/index.html: Added form onsubmit.
* fs/connect/passwd.html: Added form onsubmit.
* user_config.h: Version 0.0.3.
* slighttp/http.h: Upped version.
* rest/network.c (create_response): Only create a response if there isn't one.
*				 (rest_network_put_handler): Return size of data sent.
* slighttp/net-names.c (rest_net_names_head_handler): Allocate context struct.


2015-07-09 Martin Grønholdt

* slighttp/http.h (http_response): Removed unused send member.
* rest/network.c: Adjusted for new http_process_response behaviour.
* rest/net-names.c: Added rest_net_names_context.
*				  : Adjusted for new http_process_response behaviour.
*				   (rest_net_names_get_handler): Uses context struct.